# oop-project

./: .clang-format  CMakeLists.txt  README.md  main.cpp  tastatura.txt
.github/actions/clang-format/: action.yml
.github/actions/clang-tidy/: action.yml
.github/actions/configure-cmake/: action.yml
.github/actions/install-packages/: action.yml
.github/workflows/: cmake.yml
ext/doctest/: doctest.h
include/: Example.h  client_connection.h  command_interpreter.h  network.h  phone.h  phone_cdc.h  reverse_phone.h  server.h  shout_phone.h  tui.h  whisper_phone.h
scripts/: build_cppcheck.sh  cmake.sh  run_cppcheck.sh  run_valgrind.sh
src/: CommandInterpreter.cpp  Example.cpp  Network.cpp  Phone.cpp  PhoneCDC.cpp  ReversePhone.cpp  ShoutPhone.cpp  Tui.cpp  WhisperPhone.cpp
tests/: CMakeLists.txt  snapshot.h  snapshot_test.cpp  unit_test.cpp
tests/snapshots/: chain_shout_whisper_reverse.snap  fanout_shout_to_whisper_and_reverse.snap  network_mixed_phones.snap  network_propagation.snap
